# slurm-queue-predictor

./: .gitignore  Makefile  README.md  config.yaml  extract_example.py  preprocess_example.py  pyproject.toml  slurm_data_extractor.py  slurm_data_preprocessor.py
