[project]
name = "slurm-queue-predictor"
version = "0.1.0"
description = "A tool for predicting SLURM queue behavior"
authors = [
    {name = "Jake Frulla", email = "jake.frulla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pymysql>=1.1.0",
    "PyYAML>=6.0.0",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.0",
]
